Added deep learning libraries ass optional dependency.

--- a/com.eco.bio7.deepcv/build.properties
+++ b/com.eco.bio7.deepcv/build.properties
@@ -1,4 +1,17 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               libs/,\
+               bin/,\
+               .classpath,\
+               libs/common-image-3.1.1.jar,\
+               libs/common-io-3.1.1.jar,\
+               libs/common-lang-3.1.1.jar,\
+               libs/commons-codec-1.10.jar,\
+               libs/commons-collections4-4.1.jar,\
+               libs/commons-compress-1.21.jar,\
+               libs/commons-io-2.7.jar,\
+               libs/commons-lang3-3.11.jar,\
+               libs/commons-math3-3.5.jar,\
+               libs/commons-net-3.1.jar
