--- a/com.eco.bio7.libs.deepcv/.project
+++ b/com.eco.bio7.libs.deepcv/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.eco.bio7.libs.deepcv</name>
+	<name>com.eco.bio7.deepcv.maven</name>
 	<comment></comment>
 	<projects>
 	</projects>
