--- a/com.eco.bio7.deepcv/.classpath
+++ b/com.eco.bio7.deepcv/.classpath
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="bin/"/>
+	<classpathentry exported="true" kind="lib" path="libs/artoolkitplus-2.3.1-1.5.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/byteunits-0.9.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/common-image-3.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/common-io-3.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/common-lang-3.1.1.jar"/>
@@ -10,8 +13,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/commons-lang3-3.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-net-3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/artoolkitplus-2.3.1-1.5.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/byteunits-0.9.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/datavec-api-1.0.0-M2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/datavec-data-image-1.0.0-M2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/deeplearning4j-core-1.0.0-M2.1.jar"/>
@@ -23,7 +24,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/deeplearning4j-utility-iterators-1.0.0-M2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/fastutil-6.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ffmpeg-5.0-1.5.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/ffmpeg-5.0-1.5.7-macosx-arm64.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/ffmpeg-5.0-1.5.7-windows-x86_64.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ffmpeg-platform-5.0-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/flandmark-1.07-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/flatbuffers-java-1.12.0.jar"/>
@@ -32,6 +33,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/gson-2.8.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/guava-1.0.0-M2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/hdf5-1.12.1-1.5.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/hdf5-1.12.1-1.5.7-windows-x86_64.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/hdf5-platform-1.12.1-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/imageio-bmp-3.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/imageio-core-3.1.1.jar"/>
@@ -42,7 +44,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/jackson-1.0.0-M2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai-imageio-core-1.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javacpp-1.5.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/javacpp-1.5.7-macosx-arm64.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/javacpp-1.5.7-windows-x86_64.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javacpp-platform-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javacv-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javax.activation-1.2.0.jar"/>
@@ -51,6 +53,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/jna-platform-4.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/joda-time-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/leptonica-1.82.0-1.5.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/leptonica-1.82.0-1.5.7-windows-x86_64.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/leptonica-platform-1.82.0-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/libdc1394-2.2.6-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/libfreenect-0.5.7-1.5.7.jar"/>
@@ -58,23 +61,24 @@
 	<classpathentry exported="true" kind="lib" path="libs/librealsense-1.12.4-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/librealsense2-2.50.0-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mkl-2022.0-1.5.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/mkl-2022.0-1.5.7-windows-x86_64.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mkl-platform-2022.0-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/nd4j-api-1.0.0-M2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/nd4j-common-1.0.0-M2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/nd4j-native-1.0.0-M2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/nd4j-native-1.0.0-M2.1-macosx-arm64.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/nd4j-native-1.0.0-M2.1-windows-x86_64.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/nd4j-native-api-1.0.0-M2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/nd4j-native-platform-1.0.0-M2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/nd4j-native-preset-1.0.0-M2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/nd4j-native-preset-1.0.0-M2.1-macosx-arm64.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/nd4j-native-preset-1.0.0-M2.1-windows-x86_64.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/nd4j-presets-common-1.0.0-M2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/neoitertools-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/openblas-0.3.19-1.5.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/openblas-0.3.19-1.5.7-macosx-arm64.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/openblas-0.3.19-1.5.7-windows-x86_64.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/openblas-platform-0.3.19-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/opencsv-2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/opencv-4.5.5-1.5.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/opencv-4.5.5-1.5.7-macosx-arm64.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/opencv-4.5.5-1.5.7-windows-x86_64.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/opencv-platform-4.5.5-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/oshi-core-3.4.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/oshi-json-3.4.2.jar"/>
