--- a/com.eco.bio7.deepcv/build.properties
+++ b/com.eco.bio7.deepcv/build.properties
@@ -1,10 +1,10 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
                libs/,\
                bin/,\
                .classpath,\
+               libs/artoolkitplus-2.3.1-1.5.7.jar,\
+               libs/byteunits-0.9.1.jar,\
                libs/common-image-3.1.1.jar,\
                libs/common-io-3.1.1.jar,\
                libs/common-lang-3.1.1.jar,\
@@ -14,4 +14,81 @@ bin.includes = META-INF/,\
                libs/commons-io-2.7.jar,\
                libs/commons-lang3-3.11.jar,\
                libs/commons-math3-3.5.jar,\
-               libs/commons-net-3.1.jar
+               libs/commons-net-3.1.jar,\
+               libs/datavec-api-1.0.0-M2.1.jar,\
+               libs/datavec-data-image-1.0.0-M2.1.jar,\
+               libs/deeplearning4j-core-1.0.0-M2.1.jar,\
+               libs/deeplearning4j-datasets-1.0.0-M2.1.jar,\
+               libs/deeplearning4j-datavec-iterators-1.0.0-M2.1.jar,\
+               libs/deeplearning4j-modelimport-1.0.0-M2.1.jar,\
+               libs/deeplearning4j-nn-1.0.0-M2.1.jar,\
+               libs/deeplearning4j-ui-components-1.0.0-M2.1.jar,\
+               libs/deeplearning4j-utility-iterators-1.0.0-M2.1.jar,\
+               libs/fastutil-6.5.7.jar,\
+               libs/ffmpeg-5.0-1.5.7.jar,\
+               libs/ffmpeg-5.0-1.5.7-windows-x86_64.jar,\
+               libs/ffmpeg-platform-5.0-1.5.7.jar,\
+               libs/flandmark-1.07-1.5.7.jar,\
+               libs/flatbuffers-java-1.12.0.jar,\
+               libs/flycapture-2.13.3.31-1.5.7.jar,\
+               libs/freemarker-2.3.23.jar,\
+               libs/gson-2.8.0.jar,\
+               libs/guava-1.0.0-M2.1.jar,\
+               libs/hdf5-1.12.1-1.5.7.jar,\
+               libs/hdf5-1.12.1-1.5.7-windows-x86_64.jar,\
+               libs/hdf5-platform-1.12.1-1.5.7.jar,\
+               libs/imageio-bmp-3.1.1.jar,\
+               libs/imageio-core-3.1.1.jar,\
+               libs/imageio-jpeg-3.1.1.jar,\
+               libs/imageio-metadata-3.1.1.jar,\
+               libs/imageio-psd-3.1.1.jar,\
+               libs/imageio-tiff-3.1.1.jar,\
+               libs/jackson-1.0.0-M2.1.jar,\
+               libs/jai-imageio-core-1.3.0.jar,\
+               libs/javacpp-1.5.7.jar,\
+               libs/javacpp-1.5.7-windows-x86_64.jar,\
+               libs/javacpp-platform-1.5.7.jar,\
+               libs/javacv-1.5.7.jar,\
+               libs/javax.activation-1.2.0.jar,\
+               libs/javax.json-1.0.4.jar,\
+               libs/jna-4.3.0.jar,\
+               libs/jna-platform-4.3.0.jar,\
+               libs/joda-time-2.2.jar,\
+               libs/leptonica-1.82.0-1.5.7.jar,\
+               libs/leptonica-1.82.0-1.5.7-windows-x86_64.jar,\
+               libs/leptonica-platform-1.82.0-1.5.7.jar,\
+               libs/libdc1394-2.2.6-1.5.7.jar,\
+               libs/libfreenect-0.5.7-1.5.7.jar,\
+               libs/libfreenect2-0.2.0-1.5.7.jar,\
+               libs/librealsense-1.12.4-1.5.7.jar,\
+               libs/librealsense2-2.50.0-1.5.7.jar,\
+               libs/mkl-2022.0-1.5.7.jar,\
+               libs/mkl-2022.0-1.5.7-windows-x86_64.jar,\
+               libs/mkl-platform-2022.0-1.5.7.jar,\
+               libs/nd4j-api-1.0.0-M2.1.jar,\
+               libs/nd4j-common-1.0.0-M2.1.jar,\
+               libs/nd4j-native-1.0.0-M2.1.jar,\
+               libs/nd4j-native-1.0.0-M2.1-windows-x86_64.jar,\
+               libs/nd4j-native-api-1.0.0-M2.1.jar,\
+               libs/nd4j-native-platform-1.0.0-M2.1.jar,\
+               libs/nd4j-native-preset-1.0.0-M2.1.jar,\
+               libs/nd4j-native-preset-1.0.0-M2.1-windows-x86_64.jar,\
+               libs/nd4j-presets-common-1.0.0-M2.1.jar,\
+               libs/neoitertools-1.0.0.jar,\
+               libs/openblas-0.3.19-1.5.7.jar,\
+               libs/openblas-0.3.19-1.5.7-windows-x86_64.jar,\
+               libs/openblas-platform-0.3.19-1.5.7.jar,\
+               libs/opencsv-2.3.jar,\
+               libs/opencv-4.5.5-1.5.7.jar,\
+               libs/opencv-4.5.5-1.5.7-windows-x86_64.jar,\
+               libs/opencv-platform-4.5.5-1.5.7.jar,\
+               libs/oshi-core-3.4.2.jar,\
+               libs/oshi-json-3.4.2.jar,\
+               libs/protobuf-1.0.0-M2.1.jar,\
+               libs/resources-1.0.0-M2.1.jar,\
+               libs/slf4j-api-1.7.21.jar,\
+               libs/stream-2.9.8.jar,\
+               libs/t-digest-3.2.jar,\
+               libs/tesseract-5.0.1-1.5.7.jar,\
+               libs/threetenbp-1.3.3.jar,\
+               libs/videoinput-0.200-1.5.7.jar
