Added classpath variables.

--- a/com.eco.bio7.deepcv/build.properties
+++ b/com.eco.bio7.deepcv/build.properties
@@ -91,4 +91,10 @@ bin.includes = META-INF/,\
                libs/t-digest-3.2.jar,\
                libs/tesseract-5.0.1-1.5.7.jar,\
                libs/threetenbp-1.3.3.jar,\
-               libs/videoinput-0.200-1.5.7.jar
+               libs/videoinput-0.200-1.5.7.jar,\
+               src/,\
+               libs/api-0.26.0.jar,\
+               libs/commons-compress-1.25.0.jar,\
+               libs/gson-2.10.1.jar,\
+               libs/jna-5.13.0.jar,\
+               libs/slf4j-api-1.7.36.jar
