--- a/com.eco.bio7.deepcv/.classpath
+++ b/com.eco.bio7.deepcv/.classpath
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="bin/"/>
+	<classpathentry exported="true" kind="lib" path="libs/api-0.26.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-compress-1.25.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gson-2.10.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jna-5.13.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.36.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/artoolkitplus-2.3.1-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/byteunits-0.9.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/common-image-3.1.1.jar"/>
@@ -90,6 +94,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/tesseract-5.0.1-1.5.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/threetenbp-1.3.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/videoinput-0.200-1.5.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="bin/"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
